--- a/lubycon/css/module/lubyImageSlider.css
+++ b/lubycon/css/module/lubyImageSlider.css
@@ -28,10 +28,7 @@ img {
 }
 
 a {
-    text-decoration: none;
-    color: #000;
-    margin: 0px;
-    padding: 0px;
+    
 }
 
 * {
@@ -44,22 +41,12 @@ a {
     outline: 0;
 }
 
-
-
-#cardTest {
-    width: 100%;
-    max-width: 1000px;
-    margin: 0px auto;
-}
-#test {
-    margin: 0px auto;
-    margin-top: 50px;
-}
 /*----------------------*/
 
 .lubyImageSlider {
     position: relative;
-    background: #eeeeee;
+    display: block;
+    background: #ffffff;
     padding: 10px;
     text-align: center;
 }
@@ -85,7 +72,6 @@ a {
                 display: inline-block;
                 overflow: hidden;
                 background: #ffffff;
-                border: 1px solid #000000;
                 cursor: pointer;
                 float: left;
                 text-align: center;
@@ -128,11 +114,10 @@ a {
     }
         .lubyImageSlider .img-slider-nav .img-slider-nav-bt {
             display: inline-block;
-            width: 40px;
-            height: 10px;
-            margin: 0px 10px;
+            width: 20px;
+            height: 7px;
+            margin: 0px 7px;
             background: #444444;
-            border-radius: 3px;
             cursor: pointer;
             transition: opacity 0.2s;
         }
